--- a/faceDetect.ipynb
+++ b/faceDetect.ipynb
@@ -197,11 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tkinter import *"
+    "from tkinter import *\n",
+    "\n",
+    "root = Tk()"
    ]
   }
  ],
